create basic background

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,6 +8,8 @@
   <title>Lol pick guide</title>
 </head>
 <body>
-  <h1>Hello</h1>
+  <div id="champion-select"></div>
+  <div id="champions-list"></div>
+  <div id="pick-recommendation"></div>
 </body>
 </html>
