--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,7 +8,40 @@
   <title>Lol pick guide</title>
 </head>
 <body>
-  <div id="champion-select"></div>
+  <div id="champion-select">
+    <div class="selected-champions" id="our-bans">
+      <h2>Our bans</h2>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+    </div>
+    <div class="selected-champions" id="our-picks">
+      <h2>Our picks</h2>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+    </div>
+    <div class="selected-champions" id="their-picks">
+      <h2>Their picks</h2>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+    </div>
+    <div class="selected-champions" id="their-bans">
+      <h2>Their bans</h2>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+    </div>
+  </div>
   <div id="champions-list"></div>
   <div id="pick-recommendation"></div>
 </body>
